Fix QR secret handling

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 TELEGRAM_BOT_TOKEN=your-bot-token
 DATABASE_URL=postgresql://user:password@host:5432/dbname
-SECRET_KEY=supersecret
+# Base32 secret used for QR code generation. You can generate your own with
+# `python -c "import pyotp, os; print(pyotp.random_base32())"`
+SECRET_KEY=JBSWY3DPEHPK3PXP
 BRANCH_ID=1
