Add provided credentials to example config

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-TELEGRAM_BOT_TOKEN=your-bot-token
-DATABASE_URL=postgresql://user:password@host:5432/dbname
+TELEGRAM_BOT_TOKEN=8195533493:AAFCnXUNGFH51GsPNByfV6ectf7I5QFaDEI
+DATABASE_URL=postgresql://postgres:Master940NW@db.oupnbmkopbrhrggbhlzh.supabase.co:5432/postgres
 # Base32 secret used for QR code generation. You can generate your own with
 # `python -c "import pyotp, os; print(pyotp.random_base32())"`
 SECRET_KEY=JBSWY3DPEHPK3PXP
